package repository

import (
	"context"
	"encoding/json"
	"fmt"
	"time"

	"github.com/bskcorona-github/streamforge/packages/proto/streamforge/v1"
	"github.com/redis/go-redis/v9"
	"go.uber.org/zap"
	"google.golang.org/protobuf/types/known/timestamppb"
	"gorm.io/gorm"
)

// Repository はデータアクセス層のインターフェースです
type Repository interface {
	// メトリクス関連
	GetMetrics(ctx context.Context, query string, timeRange *v1.TimeRange, pagination *v1.Pagination) ([]*v1.Metric, *v1.Pagination, error)
	GetMetric(ctx context.Context, name string, timeRange *v1.TimeRange) (*v1.Metric, error)
	GetTimeSeries(ctx context.Context, metricName string, timeRange *v1.TimeRange, tags []*v1.Tag, aggregation string, interval time.Duration) ([]*v1.TimeSeries, error)

	// ログ関連
	GetLogs(ctx context.Context, query string, timeRange *v1.TimeRange, minLevel v1.LogLevel, pagination *v1.Pagination) ([]*v1.Log, *v1.Pagination, error)
	SearchLogs(ctx context.Context, query string, timeRange *v1.TimeRange, minLevel v1.LogLevel, pagination *v1.Pagination) ([]*v1.Log, *v1.Pagination, error)

	// トレース関連
	GetTraces(ctx context.Context, serviceName string, operationName string, timeRange *v1.TimeRange, status v1.Status, pagination *v1.Pagination) ([]*v1.Span, *v1.Pagination, error)
	GetTrace(ctx context.Context, traceID string) ([]*v1.Span, error)
	GetTraceGraph(ctx context.Context, traceID string) (*v1.TraceGraph, error)

	// アラート関連
	GetAlerts(ctx context.Context, status string, severity string, pagination *v1.Pagination) ([]*v1.Alert, *v1.Pagination, error)
	GetAlert(ctx context.Context, id string) (*v1.Alert, error)
	CreateAlert(ctx context.Context, alert *v1.Alert) (*v1.Alert, error)
	UpdateAlert(ctx context.Context, alert *v1.Alert) (*v1.Alert, error)
	DeleteAlert(ctx context.Context, id string) error

	// ダッシュボード関連
	GetDashboards(ctx context.Context, query string, pagination *v1.Pagination) ([]*v1.Dashboard, *v1.Pagination, error)
	GetDashboard(ctx context.Context, id string) (*v1.Dashboard, error)
	CreateDashboard(ctx context.Context, dashboard *v1.Dashboard) (*v1.Dashboard, error)
	UpdateDashboard(ctx context.Context, dashboard *v1.Dashboard) (*v1.Dashboard, error)
	DeleteDashboard(ctx context.Context, id string) error
}

// PostgresRepository はPostgreSQLとRedisを使用したRepositoryの実装です
type PostgresRepository struct {
	db    *gorm.DB
	redis *redis.Client
	logger *zap.Logger
}

// NewPostgresRepository は新しいPostgresRepositoryインスタンスを作成します
func NewPostgresRepository(db *gorm.DB, redis *redis.Client, logger *zap.Logger) *PostgresRepository {
	return &PostgresRepository{
		db:     db,
		redis:  redis,
		logger: logger,
	}
}

// GetMetrics はメトリクスを取得します
func (r *PostgresRepository) GetMetrics(ctx context.Context, query string, timeRange *v1.TimeRange, pagination *v1.Pagination) ([]*v1.Metric, *v1.Pagination, error) {
	// TODO: 実装
	r.logger.Info("GetMetrics called", zap.String("query", query))
	return []*v1.Metric{}, &v1.Pagination{}, nil
}

// GetMetric は特定のメトリクスを取得します
func (r *PostgresRepository) GetMetric(ctx context.Context, name string, timeRange *v1.TimeRange) (*v1.Metric, error) {
	// TODO: 実装
	r.logger.Info("GetMetric called", zap.String("name", name))
	return &v1.Metric{}, nil
}

// GetTimeSeries は時系列データを取得します
func (r *PostgresRepository) GetTimeSeries(ctx context.Context, metricName string, timeRange *v1.TimeRange, tags []*v1.Tag, aggregation string, interval time.Duration) ([]*v1.TimeSeries, error) {
	// TODO: 実装
	r.logger.Info("GetTimeSeries called", zap.String("metricName", metricName))
	return []*v1.TimeSeries{}, nil
}

// GetLogs はログを取得します
func (r *PostgresRepository) GetLogs(ctx context.Context, query string, timeRange *v1.TimeRange, minLevel v1.LogLevel, pagination *v1.Pagination) ([]*v1.Log, *v1.Pagination, error) {
	// TODO: 実装
	r.logger.Info("GetLogs called", zap.String("query", query))
	return []*v1.Log{}, &v1.Pagination{}, nil
}

// SearchLogs はログを検索します
func (r *PostgresRepository) SearchLogs(ctx context.Context, query string, timeRange *v1.TimeRange, minLevel v1.LogLevel, pagination *v1.Pagination) ([]*v1.Log, *v1.Pagination, error) {
	// TODO: 実装
	r.logger.Info("SearchLogs called", zap.String("query", query))
	return []*v1.Log{}, &v1.Pagination{}, nil
}

// GetTraces はトレースを取得します
func (r *PostgresRepository) GetTraces(ctx context.Context, serviceName string, operationName string, timeRange *v1.TimeRange, status v1.Status, pagination *v1.Pagination) ([]*v1.Span, *v1.Pagination, error) {
	// TODO: 実装
	r.logger.Info("GetTraces called", zap.String("serviceName", serviceName))
	return []*v1.Span{}, &v1.Pagination{}, nil
}

// GetTrace は特定のトレースを取得します
func (r *PostgresRepository) GetTrace(ctx context.Context, traceID string) ([]*v1.Span, error) {
	// TODO: 実装
	r.logger.Info("GetTrace called", zap.String("traceID", traceID))
	return []*v1.Span{}, nil
}

// GetTraceGraph はトレースグラフを取得します
func (r *PostgresRepository) GetTraceGraph(ctx context.Context, traceID string) (*v1.TraceGraph, error) {
	// TODO: 実装
	r.logger.Info("GetTraceGraph called", zap.String("traceID", traceID))
	return &v1.TraceGraph{}, nil
}

// GetAlerts はアラートを取得します
func (r *PostgresRepository) GetAlerts(ctx context.Context, status string, severity string, pagination *v1.Pagination) ([]*v1.Alert, *v1.Pagination, error) {
	// TODO: 実装
	r.logger.Info("GetAlerts called", zap.String("status", status))
	return []*v1.Alert{}, &v1.Pagination{}, nil
}

// GetAlert は特定のアラートを取得します
func (r *PostgresRepository) GetAlert(ctx context.Context, id string) (*v1.Alert, error) {
	// TODO: 実装
	r.logger.Info("GetAlert called", zap.String("id", id))
	return &v1.Alert{}, nil
}

// CreateAlert はアラートを作成します
func (r *PostgresRepository) CreateAlert(ctx context.Context, alert *v1.Alert) (*v1.Alert, error) {
	// TODO: 実装
	r.logger.Info("CreateAlert called", zap.String("name", alert.Name))
	return alert, nil
}

// UpdateAlert はアラートを更新します
func (r *PostgresRepository) UpdateAlert(ctx context.Context, alert *v1.Alert) (*v1.Alert, error) {
	// TODO: 実装
	r.logger.Info("UpdateAlert called", zap.String("id", alert.Id))
	return alert, nil
}

// DeleteAlert はアラートを削除します
func (r *PostgresRepository) DeleteAlert(ctx context.Context, id string) error {
	// TODO: 実装
	r.logger.Info("DeleteAlert called", zap.String("id", id))
	return nil
}

// GetDashboards はダッシュボードを取得します
func (r *PostgresRepository) GetDashboards(ctx context.Context, query string, pagination *v1.Pagination) ([]*v1.Dashboard, *v1.Pagination, error) {
	// TODO: 実装
	r.logger.Info("GetDashboards called", zap.String("query", query))
	return []*v1.Dashboard{}, &v1.Pagination{}, nil
}

// GetDashboard は特定のダッシュボードを取得します
func (r *PostgresRepository) GetDashboard(ctx context.Context, id string) (*v1.Dashboard, error) {
	// TODO: 実装
	r.logger.Info("GetDashboard called", zap.String("id", id))
	return &v1.Dashboard{}, nil
}

// CreateDashboard はダッシュボードを作成します
func (r *PostgresRepository) CreateDashboard(ctx context.Context, dashboard *v1.Dashboard) (*v1.Dashboard, error) {
	// TODO: 実装
	r.logger.Info("CreateDashboard called", zap.String("name", dashboard.Name))
	return dashboard, nil
}

// UpdateDashboard はダッシュボードを更新します
func (r *PostgresRepository) UpdateDashboard(ctx context.Context, dashboard *v1.Dashboard) (*v1.Dashboard, error) {
	// TODO: 実装
	r.logger.Info("UpdateDashboard called", zap.String("id", dashboard.Id))
	return dashboard, nil
}

// DeleteDashboard はダッシュボードを削除します
func (r *PostgresRepository) DeleteDashboard(ctx context.Context, id string) error {
	// TODO: 実装
	r.logger.Info("DeleteDashboard called", zap.String("id", id))
	return nil
} 